MFH: Fixed bug #34456 (Possible crash inside pspell extension).